TOPDIR = @top_srcdir@
AM_CFLAGS = @CFLAGS@ -I$(TOPDIR)/include

lib_LIBRARIES = libintrin.a

libintrin_a_SOURCES = \
	sse_add_su3_vector.c \
	sse_mult_adj_su3_mat_4vec.c \
	sse_mult_adj_su3_mat_hwvec.c \
	sse_mult_su3_mat_hwvec.c \
	sse_mult_adj_su3_mat_vec_4dir.c \
	sse_mult_adj_su3_mat_vec.c \
	sse_mult_su3_an.c \
	sse_mult_su3_mat_vec.c \
	sse_mult_su3_mat_vec_sum_4dir.c \
	sse_mult_su3_na.c \
	sse_mult_su3_nn.c \
	sse_scalar_mult_add_su3_matrix.c \
	sse_scalar_mult_add_su3_vector.c \
	sse_su3_projector.c \
	sse_sub_four_su3_vecs.c
