include_HEADERS=\
	inline_sse.h \
	sse_add_su3_vector.h \
	sse_mult_adj_su3_mat_4vec.h \
	sse_mult_adj_su3_mat_hwvec.h \
	sse_mult_su3_mat_hwvec.h \
	sse_mult_adj_su3_mat_vec_4dir.h \
	sse_mult_adj_su3_mat_vec.h \
	sse_mult_su3_an.h \
	sse_mult_su3_mat_vec.h \
	sse_mult_su3_mat_vec_sum_4dir.h \
	sse_mult_su3_na.h \
	sse_mult_su3_nn.h \
	sse_scalar_mult_add_su3_matrix.h \
	sse_scalar_mult_add_su3_vector.h \
	sse_su3_projector.h \
	sse_sub_four_su3_vecs.h
