include_HEADERS = \
    xpath_reader_config.h \
    xpath_reader.h basic_xpath_reader.h \
    xml_tcomplex.h xml_array.h xml_array2d.h xml_array3d.h xml_array4d.h \
    xml_document.h xml_attribute.h \
    xml_writer.h xml_simplewriter.h \
    xml_simpleschemawriter.h xml_struct_writer.h  \
    xml_array_writer.h xml_array_type.h xml_schemawriter.h

nodist_include_HEADERS = xpath_reader_config_internal.h
